# HPMSApi

./: CMakeLists.txt  README.md
include/api/: HPMSActorAdapter.h  HPMSAnimationAdapter.h  HPMSApiManager.h  HPMSBackgroundImageAdapter.h  HPMSCameraAdapter.h  HPMSContextAdapter.h  HPMSEntityAdapter.h  HPMSImageAdapter.h  HPMSInputUtils.h  HPMSLightAdapter.h  HPMSOverlayImageAdapter.h  HPMSSceneManagerAdapter.h  HPMSSceneNodeAdapter.h  HPMSSimulatorAdapter.h  HPMSSupplierAdapter.h
include/common/: HPMSNames.h  HPMSObject.h  HPMSUtils.h
src/api/: HPMSApiManager.cpp
